--- a/.cproject
+++ b/.cproject
@@ -106,7 +106,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.inputFile.132465996" name="Relocatable files, object files and library files (-input/-library/-binary)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.inputFile" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/FSL/fsl.lib}&quot;"/>
 								</option>
-								<option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.section.47453023" name="Sections (-start)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.section" value="" valueType="string"/>
+								<option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.section.47453023" name="Sections (-start)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.section" value=".text,.data,.sdata,.RLIB,.SLIB,.textf,FSL_FCD,FSL_RCD,FSL_BCD,FSL_BECD/0D8,.const,.constf/03000,.dataR,.bss/0FE700,.sdataR,.sbss/0FFE20" valueType="string"/>
 								<option id="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.autoSectionLayout.1510188641" name="Layout sections automatically (-auto_section_layout)" superClass="com.renesas.cdt.managedbuild.renesas.ccrl.linker.option.autoSectionLayout" value="false" valueType="boolean"/>
 								<inputType id="Base.Linker.ccrl.inputType.1977163903" name="Linker InputType" superClass="Base.Linker.ccrl.inputType"/>
 							</tool>
